# json-packer

./: .editorconfig  CMakeLists.txt  README.md
cmake/: Catch2.cmake  NlohmannJSON.cmake  StandardProjectSettings.cmake
include/: binary_stream.hpp  json_key_dictionary.hpp  json_packer.hpp  json_tlv_float.hpp  json_tlv_integral.hpp  json_tlv_null.hpp  json_tlv_object.hpp  json_tlv_record.hpp  json_tlv_string.hpp  serialization.hpp
src/: CMakeLists.txt  dummy.cpp  json_key_dictionary.cpp  json_packer.cpp  json_tlv_float.cpp  json_tlv_integral.cpp  json_tlv_null.cpp  json_tlv_object.cpp  json_tlv_record.cpp  json_tlv_string.cpp  main.cpp  serialization.cpp
test/: CMakeLists.txt  json_key_dictionary_test.cpp  json_packer_test.cpp  json_tlv_float_test.cpp  json_tlv_integral_test.cpp  json_tlv_null_test.cpp  json_tlv_record_test.cpp  json_tlv_string_test.cpp  test_data.txt
test/test_data/: test_data1.txt
